src/objects/Mytest__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Cate__c</fullName>
        <label>Category</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claes__c</fullName>
        <label>Classnames</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cont__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gup__c</fullName>
        <label>Group</label>
        <type>TextArea</type>
    </fields>
    <label>Mytest</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mytests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>